# sudoku-solver

./: .gitignore  Cargo.toml  README.md
rust/: .gitignore
rust/src/: examples.rs  main.rs  sudoku.rs
src/: examples.rs  sudoku.rs
zig/: build.zig  build.zig.zon
zig/src/: examples.zig  main.zig  sudoku.zig
