[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.release]
# lto = "fat"
codegen-units = 1
# panic = "abort"
# opt-level = 3
debug = true

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-cpu=native"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

